Replacing Atlas Edit Monthly Cycle - Proposal Terminology

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3421,8 +3421,8 @@
           </td>
           <td>Monthly Governance Cycle - Atlas Edit Monthly Cycle - Origination</td>
           <td>Core</td>
-          <td>The author of an Atlas Edit Monthly Cycle proposal ("proposal", "Atlas Edit Proposal", or "AEP")
-            must post the proposal in the Sky Forum under the appropriate category.</td>
+          <td>The author of an Atlas Edit Monthly Cycle proposal (”proposal”, “Atlas Edit Proposal”, “AEP”, “Monthly Cycle Proposal”, 
+            or “AEM Proposal”) must post the proposal in the Sky Forum under the appropriate category.</td>
         </tr>
         <tr>
           <td>
