Aligning Element Annotations with their Target Document

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -9931,15 +9931,13 @@
         </tr>
         <tr>
           <td>
-            <dfn>Contagion
-              Risk Of Misalignment - Element Annotation</dfn>
+            <dfn>Risk Of Misalignment Spreading Among ACs - Element Annotation</dfn>
           </td>
-          <td>Contagion Risk Of Misalignment - Element Annotation</td>
+          <td>Risk Of Misalignment Spreading Among ACs - Element Annotation</td>
           <td>Annotation</td>
-          <td>The element "contagion risk of misalignment" refers to the potential for misalignment by one AC to
-            influence or lead to misalignment among other ACs, creating a broader systemic risk. The element
-            emphasizes the need for quick action to contain any breach before it spreads and causes wider
-            disruptions.</td>
+          <td>he element “risk of misalignment spreading among ACs” refers to the potential for misalignment by one 
+            AC to influence or lead to misalignment among other ACs, creating a broader systemic risk. The element 
+            emphasizes the need for quick action to contain any breach before it spreads and causes wider disruptions.</td>
         </tr>
         <tr>
           <td>
@@ -10406,17 +10404,6 @@
           <td>This element clarifies that the Facilitator cannot choose to manage only certain parts of a Scope or
             limit their responsibility to specific tasks. They must accept the full responsibilities and manage
             the Scope as a whole.</td>
-        </tr>
-        <tr>
-          <td>
-            <dfn>Potential
-              Misalignment - Element Annotation</dfn>
-          </td>
-          <td>Potential Misalignment - Element Annotation</td>
-          <td>Annotation</td>
-          <td>The element "potential misalignment" refers to any situation where there is a reasonable suspicion
-            or indication that an Alignment Conserver (AC) has breached their obligations or requirements, as
-            specified in the Atlas.</td>
         </tr>
         <tr>
           <td>
