--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3045,7 +3045,7 @@
             SparkLend</td>
           <td>Core</td>
           <td>
-            n addition to the SparkLend Freezer Mom contract defined in <dfn>A.1.9
+            In addition to the SparkLend Freezer Mom contract defined in <dfn>A.1.9
               - Sky Core Governance Security - Governance Security Delay Requirements - SparkLend Freezer Mom
               Exception</dfn>, an external SparkLend Security Access Multisig has been established that allows for pausing and/or freezing SparkLend markets. The SparkLend Security Access Multisig can enable or disable the SparkLend Freezer Mom contract without the need for inclusion in a spell through the standard Executive Vote process.
           </td>
