--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2071,7 +2071,7 @@
           <td>Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget Stream</td>
           <td>Section</td>
           <td>If an AD loses its budget due to losing its Prime Delegate rank, the full contents of the AD Buffer 
-            can be paid out in the next AD compensation cycle**,** except as specified in A.1.5 - Aligned Delegates - 
+            can be paid out in the next AD compensation cycle**,** except as specified in <dfn>A.1.5 - Aligned Delegates - 
             Budget And Participation Requirements - Payout Limitations For ADs Triggering Atlas Edit Weekly Cycle Proposals.</td>
         </tr>
         <tr>
