Update Sky Atlas/Sky Atlas.html
Co-authored-by: blimpa <72349134+blimpa@users.noreply.github.com>

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2072,7 +2072,7 @@
           <td>Section</td>
           <td>If an AD loses its budget due to losing its Prime Delegate rank, the full contents of the AD Buffer 
             can be paid out in the next AD compensation cycle**,** except as specified in <dfn>A.1.5 - Aligned Delegates - 
-            Budget And Participation Requirements - Payout Limitations For ADs Triggering Atlas Edit Weekly Cycle Proposals.</td>
+            Budget And Participation Requirements - Payout Limitations For ADs Triggering Atlas Edit Weekly Cycle Proposals</dfn>.</td>
         </tr>
         <tr>
           <td>
