--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2085,7 +2085,7 @@
           <td>Section</td>
           <td>If an AD has triggered an Atlas Edit Weekly Cycle Proposal pursuant to A.1.11 - Weekly Governance Cycle - Atlas Edit 
             Weekly Cycle - Triggering Requirement, no payouts may be made that would reduce their AD Buffer below one (1) month’s 
-            worth of the budget specified in A.1.5 - Aligned Delegates - Budget And Participation Requirements - Budget Amount For 
+            worth of the budget specified in <dfn>A.1.5 - Aligned Delegates - Budget And Participation Requirements - Budget Amount For 
             Prime Delegate Slots until the Proposal has been voted on or rejected by the Governance Facilitators for misalignment.</td>
         </tr>
         <tr>
