Update Sky Atlas/Sky Atlas.html
Co-authored-by: blimpa <72349134+blimpa@users.noreply.github.com>

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2084,7 +2084,7 @@
             For ADs Triggering Atlas Edit Weekly Cycle Proposals</td>
           <td>Section</td>
           <td>If an AD has triggered an Atlas Edit Weekly Cycle Proposal pursuant to <dfn>A.1.11 - Weekly Governance Cycle - Atlas Edit 
-            Weekly Cycle - Triggering Requirement, no payouts may be made that would reduce their AD Buffer below one (1) month’s 
+            Weekly Cycle - Triggering Requirement</dfn>, no payouts may be made that would reduce their AD Buffer below one (1) month’s 
             worth of the budget specified in <dfn>A.1.5 - Aligned Delegates - Budget And Participation Requirements - Budget Amount For 
             Prime Delegate Slots</dfn> until the Proposal has been voted on or rejected by the Governance Facilitators for misalignment.</td>
         </tr>
