--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2065,13 +2065,12 @@
         <tr>
           <td>
             <dfn>A.1.5
-              - Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget
-              Stream</dfn>
+              - Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget</dfn>
           </td>
-          <td>Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget Stream</td>
+          <td>Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget</td>
           <td>Section</td>
           <td>If an AD loses its budget due to losing its Prime Delegate rank, the full contents of the AD Buffer 
-            can be paid out in the next AD compensation cycle**,** except as specified in <dfn>A.1.5 - Aligned Delegates - 
+            can be paid out in the next AD compensation cycle, except as specified in <dfn>A.1.5 - Aligned Delegates - 
             Budget And Participation Requirements - Payout Limitations For ADs Triggering Atlas Edit Weekly Cycle Proposals</dfn>.</td>
         </tr>
         <tr>
