Removing excess period

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -11280,7 +11280,7 @@
             month’s worth of budget remains in effect until the triggered Proposal is fully resolved - that is, until 
             either (1) the Proposal is rejected by the Governance Facilitators for misalignment, or (2) a Sky Governance 
             vote on the Proposal concludes in an approval or rejection. If the Proposal is voted down or rejected for 
-            misalignment, the PD will lose their entire AD Buffer.</dfn>.
+            misalignment, the PD will lose their entire AD Buffer</dfn>.
           </td>
        </tr>
             <tr>
