--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -9961,7 +9961,7 @@
           </td>
           <td>Risk Of Misalignment Spreading Among ACs - Element Annotation</td>
           <td>Annotation</td>
-          <td>he element “risk of misalignment spreading among ACs” refers to the potential for misalignment by one 
+          <td>The element “risk of misalignment spreading among ACs” refers to the potential for misalignment by one 
             AC to influence or lead to misalignment among other ACs, creating a broader systemic risk. The element 
             emphasizes the need for quick action to contain any breach before it spreads and causes wider disruptions.</td>
         </tr>
