--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2961,42 +2961,10 @@
           <td>Sky Core Governance Security - Governance Security Delay Requirements - Smart Burn Engine Breaker
             Exception</td>
           <td>Core</td>
-          <td>The SplitterMom contract allows for the disabling of the Smart Burn Engine without the GSM delay. 
-            This functionality is available so that Sky Governance can react to emergencies regarding the Smart 
-            Burn Engine. Since the Splitter contract also allocates USDS from the Surplus Buffer to USDS Seal Rewards, 
-            the activation of SplitterMom also disables these rewards until the activation is reversed by Sky 
-            Governance.<br>Each action executed by the Multisig, including any function calls and their parameters, must 
-            be reported to the Sky community within a reasonable time frame through a post on the Sky Forum. Such actions 
-            include activating or disabling the pause or freeze function. The element “multisig” refers to a blockchain wallet 
-            implemented as a smart contract and requiring multiple signers to approve transactions.<div>A blockchain wallet has an address associated with it and can hold cryptocurrency assets as well as interact with smart contracts. The address of a blockchain wallet may be granted privileged access to interact with other smart contracts, allowing the owner of the wallet to perform functions not available to other users.
-  
-  A multisig allows the control of a wallet to be shared among the signers based on specified parameters, including the number of signers and how many signers are needed to approve each transaction. This allows a wallet to be more safely managed: for instance, a multisig prevents the possibility that a single signer could take malicious action and allows the signers to be updated if necessary.
-  - SparkLend Multisig Usage Standards (Core Document) - The SparkLend Security Access Multisig can only be used in urgent or emergency situations (e.g., potential code exploits). Such situations are characterized by the fact that 1) they have the potential to harm the Sky Ecosystem or SparkLend users; and 2) the preparation time required for an Executive Vote would leave the ecosystem vulnerable to harm (e.g., an exploit). 
-  
-  The Multisig should be used to prevent technical vulnerabilities; prevent unwanted functionality of the smart contracts or corresponding parts of the system (e.g., price oracles); or prevent unwanted usage of the smart contracts or corresponding parts of the system which deviates from intended behavior. 
-  
-  The Multsig can also be used in cases where a vulnerability or exploit is discovered in other protocols using the same codebase as SparkLend, and a timely action can prevent or mitigate the damage.
-  
-  The Governance Facilitators must ensure that use of the Multisig is generally aligned and specifically accords with the requirements defined herein.
-  - Same Codebase - Element Annotation - The element “same codebase” refers to the fact that SparkLend is based on the Aave codebase. Vulnerabilities or exploits discovered within Aave, or any other protocol utilizing the Aave codebase, could potentially be replicated and affect SparkLend.
-  - Governance Facilitators Must Exercise Due Caution In Reviewing Use Of Multisig (Action Tenet) - The list of instances justifying use of the Multisig in the Target Document is not intended to be exhaustive. However, the Governance Facilitators must exercise due caution in reviewing and validating use of the Multisig in edge cases, i.e., use of the Multisig that falls outside of the examples provided in the Target Document. In such “edge cases,” the Governance Facilitators must ensure that a postmortem is publicly published on the Sky Forum which justifies the use of the Multisig. The Governance Facilitators should also consider proposing an edit to the Target Document so that the edge case is explicitly included in the examples provided in the Target Document.
-  - SparkLend Multisig Number Of Signers (Core Document) - The SparkLend Security Access Multisig currently has a 2/5 signing requirement.
-  - SparkLend Multisig Current Signers (Core Document) - The SparkLend Security Access Multisig currently has the following signers:
-  
-  ◦ VoteWizard
-  ◦ LDR
-  ◦ Hexonaut
-  ◦ MonetSupply
-  ◦ Rema
-  - SparkLend Multisig Signer Modifications (Core Document) -  Modification of the signers of the SparkLend Security Access Multisig must be approved through a Governance Poll; no Executive Vote is required.
-  
-  The only exceptions to this are if: 1) a signer self-reports a loss of access to their private key due to any reason; or 2) a signer explicitly expresses their wish to be removed as a signer. In both cases, the signer is required to communicate the loss of access to their private key, or the wish to be removed as a signer, in the form of a public Sky Forum post. The specific signer should be replaced as soon as possible.
-  
-  Any changes to the Multisig signers that do not fall within the two exceptions listed above, or that have not been ratified by Sky Governance, should be questioned immediately and treated as malicious. The Governance Facilitators should consider preparing an expedited Executive Vote so that Sky Governance can vote on removing external security access from the Multisig.
-  
-  - SparkLend Multisig Address (Core Document) - The current whitelisted SparkLend Security Access Multisig address is:
-  
-  `0x44efFc473e81632B12486866AA1678edbb7BEeC3`</div></td>
+          <td>The SplitterMom contract allows for the disabling of the Smart Burn Engine without the GSM delay. This 
+            functionality is available so that Sky Governance can react to emergencies regarding the Smart Burn Engine. 
+            Since the Splitter contract also allocates USDS from the Surplus Buffer to USDS Seal Rewards, the activation 
+            of SplitterMom also disables these rewards until the activation is reversed by Sky Governance.</td>
         </tr>
         <tr>
           <td>
@@ -3046,8 +3014,12 @@
           <td>
             In addition to the SparkLend Freezer Mom contract defined in <dfn>A.1.9
               - Sky Core Governance Security - Governance Security Delay Requirements - SparkLend Freezer Mom
-              Exception</dfn>, an external SparkLend Security Access Multisig has been established that allows for pausing and/or freezing SparkLend markets. The SparkLend Security Access Multisig can enable or disable the SparkLend Freezer Mom contract without the need for inclusion in a spell through the standard Executive Vote process.
-          </td>
+              Exception</dfn>, an external SparkLend Security Access Multisig has been established that allows 
+            for pausing and/or freezing SparkLend markets. The SparkLend Security Access Multisig can enable or 
+            disable the SparkLend Freezer Mom contract without the need for inclusion in a spell through the 
+            standard Executive Vote process.<br> Each action executed by the Multisig, including any function 
+            calls and their parameters, must be reported to the Sky community within a reasonable time frame 
+            through a post on the Sky Forum. Such actions include activating or disabling the pause or freeze function.
         </tr>
         <tr>
           <td>
