Add multisig annotation

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -10251,6 +10251,22 @@
         </tr>
         <tr>
           <td>
+            <dfn>Multisig
+            - Element Annotation</dfn>
+          </td>
+          <td>Multisig - Element Annotation</td>
+          <td>Annotation</td>
+          <td>The element “multisig” refers to a blockchain wallet implemented as a smart contract and requiring multiple signers 
+            to approve transactions.<br> A blockchain wallet has an address associated with it and can hold cryptocurrency assets 
+            as well as interact with smart contracts. The address of a blockchain wallet may be granted privileged access to 
+            interact with other smart contracts, allowing the owner of the wallet to perform functions not available to other 
+            users.<br> A multisig allows the control of a wallet to be shared among the signers based on specified parameters, 
+            including the number of signers and how many signers are needed to approve each transaction. This allows a wallet to 
+            be more safely managed: for instance, a multisig prevents the possibility that a single signer could take malicious 
+            action and allows the signers to be updated if necessary.</td>
+        </tr>
+        <tr>
+          <td>
             <dfn>Nested
               Document Trees - Element Annotation</dfn>
           </td>
