Adding Same Codebase annotation

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -10540,6 +10540,17 @@
         </tr>
         <tr>
           <td>
+            <dfn>Same 
+              Codebase- Element Annotation</dfn>
+          </td>
+          <td>Same Codebase - Element Annotation</td>
+          <td>Annotation</td>
+          <td>The element “same codebase” refers to the fact that SparkLend is based on the Aave codebase. 
+            Vulnerabilities or exploits discovered within Aave, or any other protocol utilizing the Aave 
+            codebase, could potentially be replicated and affect SparkLend.</td>
+        </tr>
+        <tr>
+          <td>
             <dfn>Secretly
               Organizing - Element Annotation</dfn>
           </td>
