Adding Governance Facilitators Must Exercise Due Caution In Reviewing Use Of Multisig (Action Tenet)

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -11005,6 +11005,22 @@
             stage to avoid over-formalizing actions and decisions taken by Facilitators pursuant to <dfn>A.0.1
               - Atlas Preamble - General Provisions - Facilitators' Broad Discretionary Capacity</dfn>.
           </td>
+          <tr>
+          <td>
+            <dfn>Governance 
+              Facilitators Must Exercise Due Caution In Reviewing Use Of Multisig</dfn>
+          </td>
+          <td>Governance Facilitators Must Exercise Due Caution In Reviewing Use Of Multisig</td>
+          <td>Action Tenet</td>
+          <td>
+           The list of instances justifying use of the Multisig in the Target Document is not intended to be 
+            exhaustive. However, the Governance Facilitators must exercise due caution in reviewing and validating 
+            use of the Multisig in edge cases, i.e., use of the Multisig that falls outside of the examples provided 
+            in the Target Document. In such “edge cases,” the Governance Facilitators must ensure that a postmortem 
+            is publicly published on the Sky Forum which justifies the use of the Multisig. The Governance Facilitators 
+            should also consider proposing an edit to the Target Document so that the edge case is explicitly included 
+            in the examples provided in the Target Document.
+          </td>
         </tr>
         <tr>
           <td>
