Adding current signers

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3056,6 +3056,23 @@
         </tr>
         <tr>
           <td>
+            <dfn>A.1.9
+              - Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+              SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Current Signers</dfn>
+          </td>
+          <td>Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+            SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Current Signers</td>
+          <td>Core</td>
+          <td>
+            The SparkLend Security Access Multisig currently has the following signers:
+  * VoteWizard
+  * LDR
+  * Hexonaut
+  * MonetSupply
+  * Rema
+        </tr>
+        <tr>
+          <td>
             <dfn>A.1.11
               - A1 - Weekly Governance Cycle - Operational Weekly Cycle</dfn>
           </td>
