Removing stream from title

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2076,10 +2076,10 @@
         <tr>
           <td>
             <dfn>A.1.5
-              - Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget
-              Stream - Payout Limitations For ADs Triggering Atlas Edit Weekly Cycle Proposals</dfn>
+              - Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget - 
+              Payout Limitations For ADs Triggering Atlas Edit Weekly Cycle Proposals</dfn>
           </td>
-          <td>Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget Stream - Payout Limitations 
+          <td>Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget - Payout Limitations 
             For ADs Triggering Atlas Edit Weekly Cycle Proposals</td>
           <td>Section</td>
           <td>If an AD has triggered an Atlas Edit Weekly Cycle Proposal pursuant to <dfn>A.1.11 - Weekly Governance Cycle - Atlas Edit 
