--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3005,10 +3005,10 @@
         <tr>
           <td>
             <dfn>A.1.9
-              - Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+              - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
               SparkLend</dfn>
           </td>
-          <td>Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+          <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
             SparkLend</td>
           <td>Core</td>
           <td>
@@ -3024,10 +3024,10 @@
         <tr>
           <td>
             <dfn>A.1.9
-              - Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+              - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
               SparkLend - SparkLend Multisig Usage Standards</dfn>
           </td>
-          <td>Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+          <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
             SparkLend - SparkLend Multisig Usage Standards</td>
           <td>Core</td>
           <td>
@@ -3045,10 +3045,10 @@
         <tr>
           <td>
             <dfn>A.1.9
-              - Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+              - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
               SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Number Of Signers</dfn>
           </td>
-          <td>Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+          <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
             SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Number Of Signers</td>
           <td>Core</td>
           <td>
@@ -3057,10 +3057,10 @@
         <tr>
           <td>
             <dfn>A.1.9
-              - Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+              - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
               SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Current Signers</dfn>
           </td>
-          <td>Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+          <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
             SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Current Signers</td>
           <td>Core</td>
           <td>
@@ -3074,10 +3074,10 @@
          <tr>
           <td>
             <dfn>A.1.9
-              - Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+              - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
               SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Signer Modifications</dfn>
           </td>
-          <td>Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+          <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
             SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Signer Modifications</td>
           <td>Core</td>
           <td>
@@ -3094,10 +3094,10 @@
         <tr>
           <td>
             <dfn>A.1.9
-              - Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+              - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
               SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Address</dfn>
           </td>
-          <td>Sky Core Governance Security - Governance Security Culture And Research - MultiSig Freeze Of
+          <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
             SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Address</td>
           <td>Core</td>
           <td>
