Updating bullet format

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3064,12 +3064,7 @@
             SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Current Signers</td>
           <td>Core</td>
           <td>
-            The SparkLend Security Access Multisig currently has the following signers:
-  * VoteWizard
-  * LDR
-  * Hexonaut
-  * MonetSupply
-  * Rema
+            The SparkLend Security Access Multisig currently has the following signers:• VoteWizard• LDR• Hexonaut• MonetSupply• Rema
         </tr>
          <tr>
           <td>
