--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3079,8 +3079,8 @@
             Modification of the signers of the SparkLend Security Access Multisig must be approved through a Governance 
             Poll; no Executive Vote is required.<br>The only exceptions to this are if: 1) a signer self-reports a loss 
             of access to their private key due to any reason; or 2) a signer explicitly expresses their wish to be removed 
-            as a signer. In both cases, the signer is required to communicate the loss of access to their private key, or t
-            he wish to be removed as a signer, in the form of a public Sky Forum post. The specific signer should be replaced 
+            as a signer. In both cases, the signer is required to communicate the loss of access to their private key, or the 
+            wish to be removed as a signer, in the form of a public Sky Forum post. The specific signer should be replaced 
             as soon as possible.<br> Any changes to the Multisig signers that do not fall within the two exceptions listed above, 
             or that have not been ratified by Sky Governance, should be questioned immediately and treated as malicious. The 
             Governance Facilitators should consider preparing an expedited Executive Vote so that Sky Governance can vote on 
