Adding Weekly Atlas Edit Proposal - Week of 2024-10-28

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -8694,6 +8694,65 @@
         </tr>
         <tr>
           <td>
+            <dfn>A.5.2
+              - Brand Identity - Recentering Maker Brand polls</dfn>
+          </td>
+          <td>Brand Identity - Recentering Maker Brand polls</td>
+          <td>Core</td>
+          <td>The Accessibility Facilitator must run a one-off special governance poll to determine the long term 
+            brand of the backend protocol, with 3 poll options. The poll must run from November 4 to November 7. 
+            The winning option will modify the state of the Atlas as described below. The modifications and provisions 
+            of this Atlas Document overrides and supersedes all other Documents in the Atlas, despite conflict in names, 
+            tokenomics or anything else.<br> The 3 poll options are as follows:<br> Option 1:<br> Keep the Sky brand as 
+            the backend protocol brand. If this option is chosen, no further changes happen and everything remains as today 
+            with the brand. The effort to transition MKR to SKY continues, and the Sky brand remains the core brand that 
+            both denotes the frontend Sky.money, and the backend Sky Ecosystem and Sky Protocol.<br> Option 2:<br> Recenter 
+            the Maker brand. If this option is chosen, Sky is kept as the brand for the Sky.money frontend, USDS is also kept 
+            as the brand for the new stablecoin - but the underlying backend protocol has its name changed to Maker, and MKR 
+            becomes the core asset of the protocol. SkyLink becomes MakerLink, SkyChain becomes MakerChain, Sky Token Rewards 
+            becomes Star Token Rewards, and Sky Savings Rate becomes USDS Savings Rate. The Maker brand is returned with its 
+            old assets, as currently seen on makerdao.com 3, with minimal change. SKY tokens initially continue to function 
+            exactly the same, and SKY Token Rewards would continue at the same rate. Once SPK launches, SKY Token Rewards would 
+            be turned off, and the ability to migrate from MKR to SKY would be turned off. However, SKY to MKR migration would 
+            remain permanently, with a technical modification to ensure that SKY is backed by a finite amount of MKR, rather 
+            than the ability to emit new MKR. The ratio of SKY to MKR will permanently remain 1:24,000. The governance forum 
+            would revert to forum.makerdao.com 3 and other similar assets would also revert to Maker branding - with the 
+            exception of the main @skyecosystem X handle. What happens to the X handle would be decided in a later process when 
+            it is determined what’s going to happen with Sky.<br> Option 3:<br> Recenter the Maker brand, with a limited brand 
+            refresh. If this option is chosen, Sky is kept as the brand for the Sky.money frontend, USDS is also kept as the brand 
+            for the new stablecoin - but the underlying backend protocol has its name changed to Maker, and MKR becomes the core 
+            asset of the protocol. SkyLink becomes MakerLink, SkyChain becomes MakerChain, Sky Token Rewards becomes Star Token 
+            Rewards, and Sky Savings Rate becomes USDS Savings Rate. The Maker brand is slightly modified to better align with the 
+            USDS brand identity, and to align with its role as the maker of the StarDAOs. The logo font can be slightly refreshed 
+            and polished, and the colour scheme and general aesthetic should be inspired by the dark blue / navy “star theme” that 
+            can be seen on Sky.money in sections that describe Stars and governance. SKY tokens initially continue to function 
+            exactly the same, and SKY Token Rewards would continue at the same rate. Once SPK launches, SKY Token Rewards would be 
+            turned off, and the ability to migrate from MKR to SKY would be turned off. However, SKY to MKR migration would remain 
+            permanently, with a technical modification to ensure that SKY is backed by a finite amount of MKR, rather than the 
+            ability to emit new MKR. The ratio of SKY to MKR will permanently remain 1:24,000. The governance forum would revert 
+            to forum.makerdao.com 3 and other similar assets would also revert to Maker branding - with the exception of the main 
+            @skyecosystem X handle. What happens to the X handle would be decided in a later process when it is determined what’s 
+            going to happen with Sky.<br> The Accessibility Facilitator may gather feedback and input to these 3 options during 
+            the week of voting on this Atlas Edit, and use that to modify the exact language of the 3 poll options before they are 
+            put out in their final state. Any edits made in this way to a poll option will become binding on the Atlas, if the poll 
+            ends up winning.<br> The option that gets a plurality becomes the final outcome effective immediately from the moment 
+            the poll ends.<br> If Option 1 has a plurality when counting individually, but Option 2 + Option 3 combined has a 
+            plurality, then the outcome is Option 2.<br> The Accessibility Facilitator must prepare for all 3 options being chosen, 
+            including preparing brand assets in advance. If recentering the Maker Brand is chosen, in either form, then this must 
+            be implemented at events and other accessibility campaigns from the moment the poll ends, to the extent this is reasonably 
+            possible.<br> Long term implications for SKY<br> If recentering the Maker brand is chosen (Option 2 or Option 3), then, 
+            depending on what outcome is chosen for the Sky brand, the current SKY token may be renamed (e.g. to OLD_SKY), and a new 
+            SKY token can be created and used for a different purpose, such as a StarDAO. In any case, holders of the current SKY 
+            token would be guaranteed the ability to migrate back to MKR for an unlimited amount of time, and holders would be able 
+            to hold their original SKY tokens forever if they desire.<br> USDS core Stablecoin and DAI ERC20 Wrapper<br> The core 
+            stablecoin and product of the protocol is called USDS. It has multiple ERC20 wrappers, including the ERC20 USDS wrapper, 
+            and the ERC20 DAI Wrapper and ERC20 sDAI Wrapper. The total supply of USDS is the total supply of internal stablecoins 
+            in the protocol that backs all wrappers. The total supply of Dai can also be calculated by summing the supply of all 
+            wrappers branded as Dai, including Dai, sDai and Chai.
+          </td>
+        </tr>
+        <tr>
+          <td>
             <dfn>A.5.3
               - A1 - Accessibility Reward</dfn>
           </td>
