--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -8695,9 +8695,9 @@
         <tr>
           <td>
             <dfn>A.5.2
-              - Brand Identity - Recentering Maker Brand polls</dfn>
+              - Brand Identity - Recentering Maker Brand Polls</dfn>
           </td>
-          <td>Brand Identity - Recentering Maker Brand polls</td>
+          <td>Brand Identity - Recentering Maker Brand Polls</td>
           <td>Core</td>
           <td>The Accessibility Facilitator must run a one-off special governance poll to determine the long term 
             brand of the backend protocol, with 3 poll options. The poll must run from November 4 to November 7. 
@@ -8711,12 +8711,12 @@
             as the brand for the new stablecoin - but the underlying backend protocol has its name changed to Maker, and MKR 
             becomes the core asset of the protocol. SkyLink becomes MakerLink, SkyChain becomes MakerChain, Sky Token Rewards 
             becomes Star Token Rewards, and Sky Savings Rate becomes USDS Savings Rate. The Maker brand is returned with its 
-            old assets, as currently seen on makerdao.com 3, with minimal change. SKY tokens initially continue to function 
+            old assets, as currently seen on makerdao.com, with minimal change. SKY tokens initially continue to function 
             exactly the same, and SKY Token Rewards would continue at the same rate. Once SPK launches, SKY Token Rewards would 
             be turned off, and the ability to migrate from MKR to SKY would be turned off. However, SKY to MKR migration would 
             remain permanently, with a technical modification to ensure that SKY is backed by a finite amount of MKR, rather 
             than the ability to emit new MKR. The ratio of SKY to MKR will permanently remain 1:24,000. The governance forum 
-            would revert to forum.makerdao.com 3 and other similar assets would also revert to Maker branding - with the 
+            would revert to forum.makerdao.com and other similar assets would also revert to Maker branding - with the 
             exception of the main @skyecosystem X handle. What happens to the X handle would be decided in a later process when 
             it is determined what’s going to happen with Sky.<br> Option 3:<br> Recenter the Maker brand, with a limited brand 
             refresh. If this option is chosen, Sky is kept as the brand for the Sky.money frontend, USDS is also kept as the brand 
@@ -8730,7 +8730,7 @@
             turned off, and the ability to migrate from MKR to SKY would be turned off. However, SKY to MKR migration would remain 
             permanently, with a technical modification to ensure that SKY is backed by a finite amount of MKR, rather than the 
             ability to emit new MKR. The ratio of SKY to MKR will permanently remain 1:24,000. The governance forum would revert 
-            to forum.makerdao.com 3 and other similar assets would also revert to Maker branding - with the exception of the main 
+            to forum.makerdao.com and other similar assets would also revert to Maker branding - with the exception of the main 
             @skyecosystem X handle. What happens to the X handle would be decided in a later process when it is determined what’s 
             going to happen with Sky.<br> The Accessibility Facilitator may gather feedback and input to these 3 options during 
             the week of voting on this Atlas Edit, and use that to modify the exact language of the 3 poll options before they are 
