Update Sky Atlas/Sky Atlas.html
Co-authored-by: blimpa <72349134+blimpa@users.noreply.github.com>

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -8699,7 +8699,7 @@
           </td>
           <td>Brand Identity - Recentering Maker Brand Polls</td>
           <td>Core</td>
-          <td>The Accessibility Facilitator must run a one-off special governance poll to determine the long term 
+          <td>The Accessibility Facilitator must run a one-off special governance poll to determine the long-term 
             brand of the backend protocol, with 3 poll options. The poll must run from November 4 to November 7. 
             The winning option will modify the state of the Atlas as described below. The modifications and provisions 
             of this Atlas Document overrides and supersedes all other Documents in the Atlas, despite conflict in names, 
