Corrections for oct 14th poll

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -1993,7 +1993,7 @@
           </td>
           <td>Aligned Delegates - Budget And Participation Requirements - Eligibility To Receive Budget</td>
           <td>Section</td>
-          <td>Eligibility To Receive Budget - Aligned Delegates are eligible to receive a budget from the Sky Protocol 
+          <td>Aligned Delegates are eligible to receive a budget from the Sky Protocol 
             if they fulfill two (2) requirements: 1) They rank among the top Aligned Delegates based on total Voting 
             Power delegated to their Delegate Contract, and 2) They fulfill specific participation requirements defined 
             in this Article.</td>
@@ -2081,7 +2081,7 @@
           </td>
           <td>Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget - Payout Limitations 
             For ADs Triggering Atlas Edit Weekly Cycle Proposals</td>
-          <td>Section</td>
+          <td>Core</td>
           <td>If an AD has triggered an Atlas Edit Weekly Cycle Proposal pursuant to <dfn>A.1.11 - Weekly Governance Cycle - Atlas Edit 
             Weekly Cycle - Triggering Requirement</dfn>, no payouts may be made that would reduce their AD Buffer below one (1) month’s 
             worth of the budget specified in <dfn>A.1.5 - Aligned Delegates - Budget And Participation Requirements - Budget Amount For 
@@ -11465,7 +11465,7 @@
           <td>
             A Weekly Cycle Proposal is considered correctly triggered when the triggering Aligned Delegate is a Prime Delegate 
             with at least one (1) month’s worth of budget in their AD Buffer at the time of triggering the Proposal. It is 
-            inconsequential if, after triggering the Proposal, the Prime Delegate loses Prime Delegate rank.</dfn>.
+            inconsequential if, after triggering the Proposal, the Prime Delegate loses Prime Delegate rank.</dfn>
           </td>
         </tr>
         <tr>
