Adding Emergency Response System - Emergency Response - Emergency Response Group Team Members

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3185,6 +3185,19 @@
             - Cloaky<br> - Blue<br> - JuliaChang<br> - PullUp Labs<br> - Chronicle Labs<br> - TechOps
         </td>
         </tr>
+          <tr>
+          <td>
+            <dfn>A.1.9
+              - A.1.9 - A4 - Emergency Response System - Emergency Response - Emergency Response Group Team Members</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Emergency Response Group Team Members</td>
+          <td>Core</td>
+          <td>Where an Emergency Response Group Member is a team, that team should assign two (2) of its own team members to be responsible 
+            for incident response. A team may assign more than two (2) of its team members to be responsible for incident response at the 
+            discretion of the Support Facilitators. To the extent possible, the selected team members should be in different timezones and 
+            jurisdictions for maximum operational and regulatory resilience. The team members assigned to the Emergency Response Group 
+            should not be disclosed publicly under any circumstances as this could make them targets.
+        </td>
         <tr>
           <td>
             <dfn>A.1.11
