Adding Emergency Response System - Emergency Response - Ecosystem Actor Embedding

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3200,6 +3200,18 @@
         </td>
         <tr>
           <td>
+            <dfn>A.1.9
+              - A.1.9 - A4 - Emergency Response System - Emergency Response - Ecosystem Actor Embedding</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Ecosystem Actor Embedding</td>
+          <td>Core</td>
+          <td>As an extension of, and pursuant to A.1.15 - Scope Bootstrapping - Governance Security & Ecosystem Actor Embedding, Ecosystem 
+            Actor Atlas Axis is permitted to assign more than two (2) of its team members to the permissioned Emergency Response 
+            Communication Channels defined in A.1.8 - Emergency Response System - Emergency Response - Emergency Response Communication Channels, 
+            as well as any Emergency Response calls.
+        </td>    
+        <tr>
+          <td>
             <dfn>A.1.11
               - A1 - Weekly Governance Cycle - Operational Weekly Cycle</dfn>
           </td>
