Adding Emergency Response System - Emergency Response - Emergency Response Communication Channels

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3198,6 +3198,7 @@
             jurisdictions for maximum operational and regulatory resilience. The team members assigned to the Emergency Response Group 
             should not be disclosed publicly under any circumstances as this could make them targets.
         </td>
+        </tr>
         <tr>
           <td>
             <dfn>A.1.9
@@ -3209,7 +3210,18 @@
             Actor Atlas Axis is permitted to assign more than two (2) of its team members to the permissioned Emergency Response 
             Communication Channels defined in A.1.8 - Emergency Response System - Emergency Response - Emergency Response Communication Channels, 
             as well as any Emergency Response calls.
-        </td>    
+        </td>
+          </tr>
+          <tr>
+          <td>
+            <dfn>A.1.9
+              - A.1.9 - A4 - Emergency Response System - Emergency Response - Emergency Response Communication Channels</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Emergency Response Communication Channels</td>
+          <td>Core</td>
+          <td>The subdocuments herein specify the approved emergency-response communication channels.
+        </td>
+        </tr>
         <tr>
           <td>
             <dfn>A.1.11
